Fixed some layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,9 +23,13 @@ html {
     font-size: 62.5%;   
 }
 
+img {
+  width: 100%;
+}
+
 body {
     font-family: Inter, Arial, Helvetica, sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     line-height: 1.5;
     color: var(--body-color);
 }
@@ -37,7 +41,7 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 6rem;
 }
 
 h2 {
@@ -45,8 +49,9 @@ h2 {
 }
 
 h3 {
-    font-size: 3rem;
-    font-weight: 500;
+    font-size: 2.8rem;
+    font-weight: 600;
+    line-height: 1.3;
 }
 
 p {
@@ -102,7 +107,7 @@ a {
 /* Badges */
 .badge {
     border-radius: 20px;
-    padding: 0.5rem 2rem;
+    padding: 2rem;
     font-weight: 600;
     white-space: nowrap;
     font-size: 2rem;
@@ -196,16 +201,16 @@ a {
 
 /* Buttons */
 .btn {
+    border-radius: 40px;
+    border: 0;
+    cursor: pointer;
     font-size: 1.8rem;
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    text-transform: uppercase;
-    text-align: center;
     padding: 2rem 4vw;
-    border: 0;
-    border-radius: 40px;
-    cursor: pointer;
+    text-align: center;
+    text-transform: uppercase;
     white-space: nowrap;
 }
 
@@ -605,7 +610,7 @@ a {
 
 /* Blocks */
 .block {
-    --padding-vertical: 6rem;
+    --padding-vertical: 5rem;
     padding: var(--padding-vertical) 2rem;
 }
 
@@ -630,12 +635,12 @@ a {
 }
 
 .block--skewed-right {
-    padding: calc(var(--padding-vertical) + 4rem);
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
 
 .block--skewed-left {
-    padding: calc(var(--padding-vertical) + 4rem);
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
     clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 
@@ -715,20 +720,18 @@ a {
     margin: 2rem 0 5rem;
 }
 
-.hero__image {
-    width: 100%;
-}
-
 @media screen and (min-width: 768px) {
-    .hero {
-        padding-top: 0;
-    }
-
     .hero__content {
-        text-align: left;
-        align-self: center;
+      text-align: left;
+      align-self: center;
     }
-}
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .hero {
+      padding-top: 0;
+    }
+  }
 
 /* Domain Block */
 .block-domain .input-group {
@@ -791,7 +794,7 @@ a {
 }
 
 /* Showcase Block */
-.block-showcase__image >img {
+.block-showcase__image > img {
     width: 100%;
 }
 
